NEXT-1007 - rule design fixes

--- a/Resources/administration/src/module/sw-settings-rule/component/sw-condition-and-container/sw-condition-and-container.less
+++ b/Resources/administration/src/module/sw-settings-rule/component/sw-condition-and-container/sw-condition-and-container.less
@@ -1,9 +1,9 @@
 @import "~less/variables";
 
 @sw-condition-and-container-background-even: @color-white;
-@sw-condition-and-container-background-odd: @color-solitude;
-@sw-condition-and-container-button-border: @color-pattens-blue;
-@sw-condition-and-container-button: @color-wedgewood;
+@sw-condition-and-container-background-odd: #F0F2F5;
+@sw-condition-and-container-button-border: #D1D9E0;
+@sw-condition-and-container-button: #52667A;
 
 .sw-condition-and-container {
     &.container-condition-level__is--even {
