--- a/Resources/administration/src/module/sw-settings-rule/component/sw-condition-or-container/sw-condition-or-container.less
+++ b/Resources/administration/src/module/sw-settings-rule/component/sw-condition-or-container/sw-condition-or-container.less
@@ -1,10 +1,10 @@
 @import "~less/variables";
 
 @sw-condition-or-container-background-even: @color-white;
-@sw-condition-or-container-background-odd: @color-solitude;
-@sw-condition-or-container-border: @color-light-slate-grey;
-@sw-condition-or-container-button-border: @color-pattens-blue;
-@sw-condition-or-container-button: @color-wedgewood;
+@sw-condition-or-container-background-odd: #F0F2F5;
+@sw-condition-or-container-border: #788A9B;
+@sw-condition-or-container-button-border: #D1D9E0;
+@sw-condition-or-container-button: #52667A;
 
 .sw-condition-or-container {
     &.container-condition-level__is--even {
