--- a/Resources/administration/src/app/component/form/sw-confirm-field/sw-confirm-field.html.twig
+++ b/Resources/administration/src/app/component/form/sw-confirm-field/sw-confirm-field.html.twig
@@ -1,16 +1,26 @@
 {% block sw_confirm_field %}
     <div class="sw-confirm-field" :class="confirmFieldClasses">
         {% block sw_confirm_field_input_field %}
-            <sw-field v-model="draft" v-bind="additionalAttributes" @focus="showActionButtons" @blur="blurField"></sw-field>
+            <sw-field
+                v-model="draft"
+                v-bind="additionalAttributes"
+                @focus="onStartEditing"
+                @blur="onBlurField"
+                @keyup.enter="onSubmitFromKey"
+                @keyup.esc="onCancelFromKey">
+            </sw-field>
         {% endblock %}
 
         {% block sw_confirm_field_button_list %}
-            <span class="sw-confirm-field__button-list" v-if="isEditing">
+            <span v-show="isEditing" class="sw-confirm-field__button-list">
                 {% block sw_confirm_field_cancel_button %}
-                    <sw-button class="sw-confirm-field__button sw-confirm-field__button--cancel"
-                               square
-                               size="x-small"
-                               @click="cancelSubmit">
+                    <sw-button
+                        class="sw-confirm-field__button sw-confirm-field__button--cancel"
+                        square
+                        size="x-small"
+                        @click="onCancelSubmit"
+                        tabindex="-1">
+
                         {% block sw_field_inline_cancel_submit_button_icon %}
                             <sw-icon small name="small-default-x-line-small"></sw-icon>
                         {% endblock %}
@@ -18,11 +28,14 @@
                 {% endblock %}
 
                 {% block sw_confirm_field_confirm_button %}
-                    <sw-button class="sw-confirm-field__button sw-confirm-field__button--submit"
-                               square
-                               size="x-small"
-                               variant="primary"
-                               @click="submitValue">
+                    <sw-button
+                        class="sw-confirm-field__button sw-confirm-field__button--submit"
+                        square
+                        size="x-small"
+                        variant="primary"
+                        @click="onSubmitValue"
+                        tabindex="-1">
+
                         {% block sw_field_inline_submit_button_icon %}
                             <sw-icon small name="small-default-checkmark-line-small"></sw-icon>
                         {% endblock %}
