NEXT-1466 - Refactor media upload component

--- a/Resources/administration/src/app/component/media/sw-media-field/sw-media-field.html.twig
+++ b/Resources/administration/src/app/component/media/sw-media-field/sw-media-field.html.twig
@@ -46,8 +46,8 @@
                             variant="regular"
                             :allowMultiSelect="false"
                             catption="Upload File"
-                            @new-uploads-added="uploadNewFile"
-                            @media-upload-success="exposeNewId">
+                            @sw-media-upload-new-uploads-added="uploadNewFile"
+                            @sw-media-upload-media-upload-success="exposeNewId">
                         </sw-media-upload>
                     {% endblock %}
 
