--- a/Resources/administration/src/app/component/media/sw-media-upload/sw-media-upload.less
+++ b/Resources/administration/src/app/component/media/sw-media-upload/sw-media-upload.less
@@ -59,6 +59,10 @@
         }
     }
 
+    .sw-media-upload__button-compact-upload {
+        margin-right: 0 !important;
+    }
+
     .sw-media-upload__file-form {
         display: grid;
         grid-template-columns: auto auto;
