--- a/Resources/administration/src/module/sw-manufacturer/page/sw-manufacturer-detail/sw-manufacturer-detail.html.twig
+++ b/Resources/administration/src/module/sw-manufacturer/page/sw-manufacturer-detail/sw-manufacturer-detail.html.twig
@@ -56,8 +56,8 @@
                                         variant="regular"
                                         :caption="$tc('sw-manufacturer.detail.addLogoCaption')"
                                         :defaultFolder="manufacturer.entityName"
-                                        @new-uploads-added="onUploadAdded"
-                                        @media-upload-success="setMediaItem"
+                                        @sw-media-upload-new-uploads-added="onUploadAdded"
+                                        @sw-media-upload-media-upload-success="setMediaItem"
                                         @sw-media-upload-open-sidebar="openMediaSidebar">
                                     </sw-media-upload>
                                 {% endblock %}
