--- a/Resources/administration/src/app/component/media/sw-media-upload/sw-media-upload.html.twig
+++ b/Resources/administration/src/app/component/media/sw-media-upload/sw-media-upload.html.twig
@@ -2,17 +2,23 @@
     <div class="sw-media-upload">
         {% block sw_media_upload_compact %}
             <div v-if="variant == 'compact'" class="sw-media-upload__content">
-                {% block sw_media_upload_compact_button_url_upload %}
-                <sw-button class="sw-media-upload__url-upload-action" @click="openUrlModal">
-                    {{ $tc('global.sw-media-upload.buttonUrlUpload') }}
-                </sw-button>
-                {% endblock %}
+                <sw-button-group splitButton>
+                    {% block sw_media_upload_compact_button_file_upload %}
+                        <sw-button class="sw-media-upload__button-compact-upload" variant="primary" @click="onClickUpload">
+                            {{ $tc('global.sw-media-upload.buttonFileUpload') }}
+                        </sw-button>
+                    {% endblock %}
 
-                {% block sw_media_upload_compact_button_file_upload %}
-                    <sw-button variant="primary" @click="onClickUpload">
-                        {{ $tc('global.sw-media-upload.buttonFileUpload') }}
-                    </sw-button>
-                {% endblock %}
+                    <sw-context-button>
+                        <sw-button square slot="button" variant="primary" class="sw-media-upload__button-context-menu">
+                            <sw-icon name="small-arrow-medium-down" size="16"></sw-icon>
+                        </sw-button>
+
+                        <sw-context-menu-item @click="openUrlModal" class="sw-media-upload__button-url-upload">
+                            {{ $tc('global.sw-media-upload.buttonUrlUpload') }}
+                        </sw-context-menu-item>
+                    </sw-context-button>
+                </sw-button-group>
 
                 {% block sw_media_upload_compact_url_form %}
                     <sw-media-url-form
