--- a/Resources/administration/src/module/sw-media/page/sw-media-index/sw-media-index.html.twig
+++ b/Resources/administration/src/module/sw-media/page/sw-media-index/sw-media-index.html.twig
@@ -51,8 +51,8 @@
                 {% block sw_media_index_smart_bar_media_upload %}
                     <sw-media-upload
                         variant="compact"
-                        @new-uploads-added="onUploadsAdded"
-                        @media-upload-success="onUploadFinished">
+                        @sw-media-upload-new-uploads-added="onUploadsAdded"
+                        @sw-media-upload-media-upload-success="onUploadFinished">
                     </sw-media-upload>
                 {% endblock %}
             </template>
