NEXT-1007 - rule design fixes

--- a/Resources/administration/src/module/sw-settings-rule/component/sw-condition-base/sw-condition-base.less
+++ b/Resources/administration/src/module/sw-settings-rule/component/sw-condition-base/sw-condition-base.less
@@ -22,7 +22,7 @@
     background-color: @sw-condition-base-color-background;
     position: relative;
     line-height: 40px;
-    padding: 0 15px;
+    padding: 0 16px;
     height: 44px;
     border-top: 1px solid @sw-condition-base-color-border;
     border-bottom: 1px solid @sw-condition-base-color-border;
@@ -35,6 +35,7 @@
   .field--condition {
     background: @sw-condition-base-color-primary;
     color: @sw-condition-base-color-primary-text;
+    width: 168px;
     height: 44px;
     border-top: none;
     border-bottom: none;
@@ -69,7 +70,7 @@
   }
 
   .field--select {
-    width: 230px;
+    width: 196px;
     border-top: 1px solid @sw-condition-base-color-border;
     border-bottom: 1px solid @sw-condition-base-color-border;
 
@@ -148,12 +149,13 @@
   }
 
   .field--actions {
-    width: 75px;
+    width: 44px;
     border: 1px solid @sw-condition-base-color-border;
     border-top-right-radius: 3px;
     border-bottom-right-radius: 3px;
     line-height: 45px;
     text-align: left;
+    padding: 0 0;
   }
 
   .sw-field input:disabled {
