--- a/Resources/administration/src/module/sw-settings-rule/component/sw-condition-base/sw-condition-base.html.twig
+++ b/Resources/administration/src/module/sw-settings-rule/component/sw-condition-base/sw-condition-base.html.twig
@@ -1,40 +1,49 @@
 {% block sw_condition %}
-<div class="sw-condition-base" :class="conditionClass">
-    {% block sw_condition_field_condition %}
-    <div class="field field--condition">
-        {% block sw_condition_field_condition_select %}
-        <select name="name"
-                class="sw-condition-base__field"
-                v-model="condition.type">
-            {% block sw_condition_field_condition_select_option %}
-            <option v-for="(innerCondition, innerConditionType) in ruleConditionService.getConditions()"
-                    :selected="innerConditionType === condition.type"
-                    :value="innerConditionType">
-                {{ $tc(getLabel(innerConditionType)) }}
-            </option>
-            {% endblock %}
-        </select>
+<div class="sw-condition-base" :class="[conditionClass, { 'has--error': hasErrors }]">
+    <div class="sw-condition-base__container">
+        {% block sw_condition_field_condition %}
+            <div class="field field--condition">
+                {% block sw_condition_field_condition_select %}
+                    <select name="name"
+                            class="sw-condition-base__field"
+                            v-model="condition.type">
+                        {% block sw_condition_field_condition_select_option %}
+                            <option v-for="(innerCondition, innerConditionType) in ruleConditionService.getConditions()"
+                                    :selected="innerConditionType === condition.type"
+                                    :value="innerConditionType">
+                                {{ $tc(getLabel(innerConditionType)) }}
+                            </option>
+                        {% endblock %}
+                    </select>
+                {% endblock %}
+            </div>
+        {% endblock %}
+
+        {% block sw_condition_fields %}
+            <slot name="condition-fields">
+                <sw-field type="text" class="field field--main"
+                          :placeholder="$tc('global.sw-condition.condition.placeholder-warning')"
+                          :disabled="true">
+                </sw-field>
+            </slot>
+        {% endblock %}
+
+        {% block sw_condition_field_actions %}
+            <div class="field field--actions">
+                <sw-context-button>
+                    <sw-context-menu-item @click="$emit('delete-condition', condition)" variant="danger">
+                        {{ $tc('sw-settings-rule.list.contextMenuDelete') }}
+                    </sw-context-menu-item>
+                </sw-context-button>
+            </div>
         {% endblock %}
     </div>
-    {% endblock %}
-
-    {% block sw_condition_fields %}
-    <slot name="condition-fields">
-        <sw-field type="text" class="field field--main"
-                  :placeholder="$tc('global.sw-condition.condition.placeholder-warning')"
-                  :disabled="true">
-        </sw-field>
-    </slot>
-    {% endblock %}
-
-    {% block sw_condition_field_actions %}
-    <div class="field field--actions">
-        <sw-context-button>
-            <sw-context-menu-item @click="$emit('delete-condition', condition)" variant="danger">
-                {{ $tc('sw-settings-rule.list.contextMenuDelete') }}
-            </sw-context-menu-item>
-        </sw-context-button>
+    <div v-if="hasErrors" class="sw-condition-base__error-container">
+        <div v-for="(error, fieldName) in formErrors">
+            <span v-if="error.detail">
+                {{ fieldName }}: {{ error.detail }}
+            </span>
+        </div>
     </div>
-    {% endblock %}
 </div>
 {% endblock %}
