--- a/Resources/administration/src/module/sw-settings-rule/page/sw-settings-rule-list/sw-settings-rule-list.html.twig
+++ b/Resources/administration/src/module/sw-settings-rule/page/sw-settings-rule-list/sw-settings-rule-list.html.twig
@@ -65,7 +65,8 @@
                                                                 :label="$tc('sw-settings-rule.list.columnName')"
                                                                 dataIndex="name"
                                                                 sortable
-                                                                editable>
+                                                                editable
+                                                                truncate>
                                                     {% block sw_settings_rule_list_columns_name_link %}
                                                         <router-link :to="{ name: 'sw.settings.rule.detail', params: { id: item.id } }">
                                                             {% block sw_settings_rule_list_columns_name_link_label %}
