NEXT-1393 - Add specs for media folder handling

--- a/Resources/administration/src/app/component/media/sw-media-base-item/sw-media-base-item.html.twig
+++ b/Resources/administration/src/app/component/media/sw-media-base-item/sw-media-base-item.html.twig
@@ -35,6 +35,7 @@
                                   ref="inputItemName"
                                   class="sw-media-base-item__name-field"
                                   :value="editValue"
+                                  name="media-item-name"
                                   v-autofocus
                                   @click.stop
                                   @blur="onBlurInlineEdit"
