--- a/Resources/administration/src/app/component/media/sw-media-add-thumbnail-form/sw-media-add-thumbnail-form.html.twig
+++ b/Resources/administration/src/app/component/media/sw-media-add-thumbnail-form/sw-media-add-thumbnail-form.html.twig
@@ -35,7 +35,8 @@
         {% endblock %}
 
         {% block sw_media_add_thumbnail_add_button %}
-            <sw-button variant="ghost"
+            <sw-button class="sw-media-folder-settings__add-thumbnail-size-action"
+                       variant="ghost"
                        @click="onAdd"
                        :disabled="width === null || height === null || width === 0 || height === 0">
                 {{ $tc('global.sw-media-add-thumbnail-form.labelAdd') }}
