--- a/Resources/administration/src/module/sw-settings-rule/component/sw-condition-and-container/sw-condition-and-container.html.twig
+++ b/Resources/administration/src/module/sw-settings-rule/component/sw-condition-and-container/sw-condition-and-container.html.twig
@@ -23,11 +23,11 @@
                 {% endblock %}
                 {% block sw_condition_container_actions %}
                     <div class="sw-condition-and-container__actions">
-                        <sw-button class="sw-condition-and-container__actions--and" @click="onAddAndClick(condition.id)">
-                            {{ $tc('global.sw-condition.condition.and') }}
+                        <sw-button class="sw-condition-and-container__actions--and" @click="onAddAndClick">
+                            {{ $tc('global.sw-condition.condition.and').toUpperCase() }}
                         </sw-button>
-                        <sw-button class="sw-condition-and-container__actions--sub" @click="onAddChildClick(condition.id)">
-                            {{ $tc('global.sw-condition.condition.subCondition') }}
+                        <sw-button class="sw-condition-and-container__actions--sub" @click="onAddChildClick">
+                            {{ $tc('global.sw-condition.condition.subCondition').toUpperCase() }}
                         </sw-button>
                         <sw-button class="sw-condition-and-container__actions--delete" @click="onDeleteAll">
                             {{ $tc('global.sw-condition.condition.deleteConditions') }}
