NEXT-1477 - Datepicker in condition

--- a/Resources/administration/src/module/sw-settings-rule/component/sw-condition-base/sw-condition-base.less
+++ b/Resources/administration/src/module/sw-settings-rule/component/sw-condition-base/sw-condition-base.less
@@ -110,10 +110,20 @@
     }
   }
 
+  .field--date {
+    .sw-datepicker {
+      width: 100%;
+    }
+
+    .sw-field__suffix {
+      display: none;
+    }
+  }
+
   .field--main {
     flex-grow: 1;
     padding-left: 20px;
-    width: auto;
+    width: 100%;
   }
 
   .field--multi {
