--- a/Resources/administration/src/module/sw-settings-rule/component/sw-condition-date-range/sw-condition-date-range.html.twig
+++ b/Resources/administration/src/module/sw-settings-rule/component/sw-condition-date-range/sw-condition-date-range.html.twig
@@ -1,20 +1,22 @@
 {% block sw_condition_fields %}
     {% block sw_condition_fields_value %}
-        <sw-field :type="condition.value.useTime ? 'datetime' : 'date'"
-                  name="fromDate"
-                  v-model="condition.value.fromDate"
-                  class="field field--main has--arrow">
-        </sw-field>
-        <sw-field :type="condition.value.useTime ? 'datetime' : 'date'"
-                  name="toDate"
-                  v-model="condition.value.toDate"
-                  class="field field--main has--arrow">
-        </sw-field>
         <sw-field type="switch"
                   name="useTime"
                   :label="$tc('global.sw-condition.condition.dateRangeRule.useTime')"
                   v-model="condition.value.useTime"
-                  class="field field--switch">
+                  class="field field--switch has--arrow">
+        </sw-field>
+        <sw-field :type="condition.value.useTime ? 'datetime' : 'date'"
+                  name="fromDate"
+                  :datepickerConfig="datepickerConfig"
+                  v-model="fromDate"
+                  class="field field--main field--date has--arrow">
+        </sw-field>
+        <sw-field :type="condition.value.useTime ? 'datetime' : 'date'"
+                  name="toDate"
+                  :datepickerConfig="datepickerConfig"
+                  v-model="toDate"
+                  class="field field--main field--date">
         </sw-field>
     {% endblock %}
 {% endblock %}
