--- a/Resources/administration/src/app/component/media/sw-media-field/sw-media-field.html.twig
+++ b/Resources/administration/src/app/component/media/sw-media-field/sw-media-field.html.twig
@@ -1,20 +1,25 @@
 {% block sw_media_field %}
     <div class="sw-media-field">
-        {% block sw_media_field_input %}
+        {% block sw_media_field_label %}
             <label v-if="label" class="sw-media-field__label">{{ label }}</label>
-            <div class="sw-media-field__input" :class="mediaFieldClasses">
+        {% endblock %}
+
+        {% block sw_media_field_input %}
+            <div class="sw-media-field__input-container" :class="mediaFieldClasses">
                 {% block sw_media_field_preview %}
-                    <sw-media-media-item class="sw-media-field-media__list-item"
-                                         v-if="mediaEntity"
-                                         :item="mediaEntity"
-                                         :isList="true"
-                                         :showContextMenuButton="false">
+                    <sw-media-media-item
+                        class="sw-media-field__media-list-item sw-media-field__input"
+                        v-if="mediaEntity"
+                        :item="mediaEntity"
+                        :isList="true"
+                        :showContextMenuButton="false"
+                        :editable="false">
                     </sw-media-media-item>
-                    <div v-else class="sw-media-field__empty-preview"></div>
+                    <div v-else class="sw-media-field__empty-preview sw-media-field__input"></div>
                 {% endblock %}
 
                 {% block sw_media_field_toggle_button %}
-                    <sw-button class="sw-media-field__toggle-button" @click="onTogglePicker">
+                    <sw-button class="sw-media-field__toggle-button" square @click="onTogglePicker">
                         {% block sw_media_field_media_icon %}
                             <sw-icon name="default-object-image"></sw-icon>
                         {% endblock %}
@@ -24,65 +29,62 @@
         {% endblock %}
 
         {% block sw_media_field_media_picker %}
-            <transition name="sw-media-picker-down">
-                <div v-if="showPicker" class="sw-media-field__expanded-content" :style="pickerClasses">
-                    {% block sw_media_field_action_bar %}
-                        <div class="sw-media-field__actions_bar">
-                            {% block sw_media_field_action_bar_button_toggle %}
-                                <sw-button class="sw-media-field__action-button" @click="toggleUploadField">
-                                    <sw-icon class="sw-media-field__icon-add" name="default-basic-plus-line" small></sw-icon>
-                                    {{ toggleButtonLabel }}
-                                </sw-button>
-                            {% endblock %}
+            <div class="sw-media-field__expanded-content" :style="pickerClasses" v-if="showPicker">
+                {% block sw_media_field_action_bar %}
+                    <div class="sw-media-field__actions_bar">
+                        {% block sw_media_field_action_bar_button_toggle %}
+                            <sw-button class="sw-media-field__action-button" @click="toggleUploadField">
+                                <sw-icon class="sw-media-field__icon-add" name="default-basic-plus-line" small></sw-icon>
+                                {{ toggleButtonLabel }}
+                            </sw-button>
+                        {% endblock %}
 
-                            {% block sw_media_field_action_bar_button_unlink %}
-                                <sw-button v-if="mediaId" class="sw-media-field__action-button is--remove" @click="removeLink">
-                                    <sw-icon class="sw-media-field__icon-remove" name="small-default-x-circle" small>
-                                    </sw-icon>
-                                    {{ $tc('global.sw-media-field.labelUnlink') }}
-                                </sw-button>
-                            {% endblock %}
-                        </div>
-                    {% endblock %}
+                        {% block sw_media_field_action_bar_button_unlink %}
+                            <sw-button v-if="mediaId" class="sw-media-field__action-button is--remove" @click="removeLink">
+                                <sw-icon class="sw-media-field__icon-remove" name="small-default-x-circle" small>
+                                </sw-icon>
+                                {{ $tc('global.sw-media-field.labelUnlink') }}
+                            </sw-button>
+                        {% endblock %}
+                    </div>
+                {% endblock %}
 
                     {% block sw_media_field_upload_component %}
                         <sw-media-upload
                             v-if="showUploadField"
                             variant="regular"
                             :allowMultiSelect="false"
-                            catption="Upload File"
                             @sw-media-upload-new-uploads-added="uploadNewFile"
                             @sw-media-upload-media-upload-success="exposeNewId">
                         </sw-media-upload>
                     {% endblock %}
 
-                    <div v-else class="sw-media-field__media-selection">
-                        {% block sw_media_field_search_field %}
-                            <sw-simple-search-field v-model="searchTerm"></sw-simple-search-field>
-                        {% endblock %}
+                <div v-else class="sw-media-field__media-selection">
+                    {% block sw_media_field_search_field %}
+                        <sw-simple-search-field v-model="searchTerm"></sw-simple-search-field>
+                    {% endblock %}
 
-                        {% block sw_media_field_media_list %}
-                            <sw-loader v-if="isLoadingSuggestions" class="sw-media-field__picker-loader" ></sw-loader>
+                    {% block sw_media_field_media_list %}
+                        <sw-loader v-if="isLoadingSuggestions" class="sw-media-field__picker-loader" ></sw-loader>
 
-                            <ul v-else  class="sw-media-field__suggestion-list">
-                                <li v-for="suggestion in suggestedItems"
-                                    :key="suggestion.id"
-                                    class="sw-media-field__suggestion-list-entry">
-                                    {% block sw_media_field_suggestion_preview %}
-                                        <sw-media-media-item
-                                            class="sw-media-field-media__list-item"
-                                            :item="suggestion"
-                                            :isList="true"
-                                            :showContextMenuButton="false"
-                                            @sw-media-item-clicked="mediaItemChanged(suggestion.id)">
-                                        </sw-media-media-item>
-                                    {% endblock %}
-                                </li>
-                            </ul>
-                        {% endblock %}
-                    </div>
+                        <ul v-else  class="sw-media-field__suggestion-list">
+                            <li v-for="suggestion in suggestedItems"
+                                :key="suggestion.id"
+                                class="sw-media-field__suggestion-list-entry">
+                                {% block sw_media_field_suggestion_preview %}
+                                    <sw-media-media-item
+                                        class="sw-media-field__media-list-item"
+                                        :item="suggestion"
+                                        :isList="true"
+                                        :showContextMenuButton="false"
+                                        @sw-media-item-clicked="mediaItemChanged(suggestion.id)">
+                                    </sw-media-media-item>
+                                {% endblock %}
+                            </li>
+                        </ul>
+                    {% endblock %}
                 </div>
-            </transition>
+            </div>
         {% endblock %}
     </div>
 {% endblock %}
