NEXT-1518 - Fix folder ui in lists

--- a/Resources/administration/src/app/component/media/sw-media-folder-item/sw-media-folder-item.less
+++ b/Resources/administration/src/app/component/media/sw-media-folder-item/sw-media-folder-item.less
@@ -19,4 +19,10 @@
             margin-top: 2%;
         }
     }
+
+    .is--list {
+        .sw-media-base-item__preview-container {
+            border: none;
+        }
+    }
 }
