--- a/Resources/administration/src/app/component/media/sw-media-folder-item/sw-media-folder-item.html.twig
+++ b/Resources/administration/src/app/component/media/sw-media-folder-item/sw-media-folder-item.html.twig
@@ -50,6 +50,7 @@
 
                 {% block sw_media_folder_meta_data %}
                     <div slot="media-item-metadata" class="sw-media-folder-item__metadata">
+                        {{ item.createdAt|date(locale, { year: 'numeric', month: 'long', day: 'numeric' }) }}
                     </div>
                 {% endblock %}
 
