NEXT-1521 - fix rule tests

--- a/Resources/administration/src/module/sw-settings-rule/component/sw-condition-and-container/sw-condition-and-container.html.twig
+++ b/Resources/administration/src/module/sw-settings-rule/component/sw-condition-and-container/sw-condition-and-container.html.twig
@@ -24,10 +24,10 @@
                 {% block sw_condition_container_actions %}
                     <div class="sw-condition-and-container__actions">
                         <sw-button class="sw-condition-and-container__actions--and" @click="onAddAndClick">
-                            {{ $tc('global.sw-condition.condition.and').toUpperCase() }}
+                            {{ $tc('global.sw-condition.condition.and') }}
                         </sw-button>
                         <sw-button class="sw-condition-and-container__actions--sub" @click="onAddChildClick">
-                            {{ $tc('global.sw-condition.condition.subCondition').toUpperCase() }}
+                            {{ $tc('global.sw-condition.condition.subCondition') }}
                         </sw-button>
                         <sw-button class="sw-condition-and-container__actions--delete" @click="onDeleteAll">
                             {{ $tc('global.sw-condition.condition.deleteConditions') }}
