--- a/Resources/administration/src/module/sw-settings-rule/component/sw-condition-or-container/sw-condition-or-container.html.twig
+++ b/Resources/administration/src/module/sw-settings-rule/component/sw-condition-or-container/sw-condition-or-container.html.twig
@@ -24,10 +24,10 @@
                 {% block sw_condition_container_actions %}
                     <div class="sw-condition-or-container__actions">
                         <sw-button class="sw-condition-or-container__actions--or" @click="onAddAndClick">
-                            {{ $tc('global.sw-condition.condition.or').toUpperCase() }}
+                            {{ $tc('global.sw-condition.condition.or') }}
                         </sw-button>
                         <sw-button v-if="level !== 0" class="sw-condition-or-container__actions--sub" @click="onAddChildClick">
-                            {{ $tc('global.sw-condition.condition.subCondition').toUpperCase() }}
+                            {{ $tc('global.sw-condition.condition.subCondition') }}
                         </sw-button>
                         <sw-button class="sw-condition-or-container__actions--delete" @click="onDeleteAll">
                             {{ $tc('global.sw-condition.condition.deleteConditions') }}
